--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -3,29 +3,21 @@
     border-radius: 2px;
     border: 5px solid white;
     height: 200px;
-    margin: 1rem;
-    position: relative;
+    margin: 8px;
     width: 200px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-    
   }
   
   .card > .img-container {
     height: 100%;
     overflow: hidden;
     background:#6CADDC;
-    align-content: center;
+    
   }
   .card > .img-container > img {
     width: 70%;
+    justify-content: center;
     
   }
-  img{
-    align-content: center;
-  }
   
-  .card > .content {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 15px;
-  }
+  
