--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
 }
+.row{
+  justify-content: center;
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
